# WeatherProxy

./: .gitignore  WeatherProxy.cabal  flake.nix
app/: .Main.hs.~undo-tree~  ArgumentsParser.hs  City.hs  Common.hs  Main.hs  ServedApi.hs  Weather.hs  WeatherRequest.hs
app/Data/: Common.hs  KDTree.hs  Weather.hs
app/OpenWeather/: City.hs  WeatherRequest.hs
