cabal-version:      3.0
name:               WeatherProxy
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Molin Stepan
maintainer:         molin.stepan@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable WeatherProxy
    import:           warnings
    main-is:          Main.hs
    other-modules:    Weather
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , servant
                    , servant-client
                    , aeson
                    , bytestring
                    , http-client
                    , text

                    
    hs-source-dirs:   app
    default-language: GHC2021
